--- a/src/assets/styles/results-style.css
+++ b/src/assets/styles/results-style.css
@@ -11,7 +11,7 @@ section{
     align-items: center;
     justify-content: space-between;
     font-family: 'Montserrat';
-    color: blue;
+    color: #5276D3;
 
   }
   .pagination {
@@ -61,4 +61,19 @@ section{
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
+  }
+  .content-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .favorite-button{
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: transparent;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 12px;
+    color: #777777;
   }
